update tag and commit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <a href="" class="brand-logo"><img src="logo.png" alt="" width="17%" id="img-logo"></a>
             <a href="#" data-activates="mobile-navbar" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-              <li><a href="">About Us</a></li>
+              <li><b><a href="">About Us</a></b></li>
+              <li><b><a href="">About Us</a></b></li>
+              <li><b><a href="">About Us</a></b></li>
               <li><a href="">Client</a></li>
               <li><a href="">Portfolio</a></li>
               <li><a href="">Contact Us</a></li>
